syntax = "proto3";

package mastopoof.storage;

import "mastopoof/settings/settings.proto";

// UserState is the state of a Mastopoof user, stored as JSON in the DB.
message UserState {
	// User ID.
  int64 uid = 1 [json_name = "uid"];

	// Default stream of that user.
  int64 default_stid = 2 [json_name = "default_stid"];

  mastopoof.settings.Settings settings = 3 [json_name = "settings"];
}

// AppRegState contains information about an app registration on a Mastodon server.
// This state is kept in DB.
message AppRegState {
  // The storage key for this app registration.
	// Redundant in storage, but convenient when manipulating the data around.
  string key = 1 [json_name = "key"];

  // Following fields are an AppRegKey.
	// Mastodon server address.
  string server_addr = 2  [json_name = "server_addr"];
	// Scopes used when registering the app.
	string scopes = 3 [json_name = "scopes"];
	// Where the oauth should redirect - incl. /_redirect.
  string redirect_uri = 4 [json_name = "redirect_uri"];

	// App registration info not part of the key.
	string client_id = 5 [json_name = "client_id"];
  string client_secret = 6 [json_name = "client_secret"] ;
  string auth_uri = 7 [json_name = "auth_uri"];
}

// AccountState represents information about a mastodon account in the DB.
message AccountState {
	// AccountState ASID within storage. Just an arbitrary number for primary key.
	int64 asid = 1 [json_name ="asid"];

	// The Mastodon server this account is part of.
	// E.g., `https://mastodon.social`
	string server_addr = 2 [json_name ="server_addr"];
	// The Mastodon account ID on the server.
	// E.g., `123456789765432132`
	string account_id = 3 [json_name ="account_id"];
	// The Mastodon username
	// E.g., `foobar`
	string username = 4 [json_name ="username"];

	string access_token = 5 [json_name ="access_token"];

	// The user using this mastodon account.
	int64 uid = 6 [json_name ="uid"];
	// Last home status ID fetched.
	string last_home_status_id = 7 [json_name ="last_home_status_id"];
}
